Translate comments to English